master: login page added

--- a/src/main/webapp/views/login.xhtml
+++ b/src/main/webapp/views/login.xhtml
@@ -5,32 +5,56 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core">
-
 <h:head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"/>
+    <title>AdminLTE 2 | Log in</title>
+    <link rel="stylesheet" href="/resources/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"/>
+    <link rel="stylesheet" href="/resources/css/AdminLTE.min.css"/>
+    <script type="text/javascript" src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script type="text/javascript" src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 </h:head>
 
-<f:view>
-    <ui:insert name="header">
-        <ui:include src="../blocks/header.xhtml"/>
-    </ui:insert>
+<h:body class="hold-transition login-page">
+    <h:panelGroup layout="block" class="login-box">
 
-    <h:form id="loginForm" method="post" prependId="false">
-        <h:panelGroup>
-            UN: <h:inputText id="j_username" required="true"/>
+        <h:panelGroup layout="block" class="login-logo">
+            <h:outputLink value="/views/index.xhtml"><strong>Admin</strong>LTE</h:outputLink>
         </h:panelGroup>
-        <h:panelGroup>
-            UN: <h:inputText id="j_password" required="true"/>
-        </h:panelGroup>
-        <br/>
-        <h:panelGroup>
-            <h:commandButton type="submit" id="login" action="#{authenticationBean.doLogin}"
-                             value="Login"/>
-        </h:panelGroup>
-    </h:form>
 
-</f:view>
+        <h:panelGroup layout="block" class="login-box-body">
+            <p class="login-box-msg">Sign in to start your session</p>
+            <h:form prependId="false">
 
+                <h:panelGroup layout="block" class="form-group has-feedback">
+                    <h:inputText id="j_username" class="form-control" required="true"/>
+                    <span class="glyphicon glyphicon-envelope form-control-feedback"/>
+                </h:panelGroup>
+
+                <h:panelGroup layout="block" class="form-group has-feedback">
+                    <h:inputSecret id="j_password" class="form-control" required="true"/>
+                    <span class="glyphicon glyphicon-lock form-control-feedback"/>
+                </h:panelGroup>
+
+                <h:panelGroup layout="block" class="col-xs-4 col-xs-offset-8">
+                    <h:commandLink type="submit"
+                                   action="#{authenticationBean.doLogin}"
+                                   class="btn btn-primary btn-block btn-flat">Sign In
+                    </h:commandLink>
+                </h:panelGroup>
+
+            </h:form>
+            <h:outputLink value="#">I forgot my password</h:outputLink><br/>
+            <h:outputLink value="register.html" class="text-center">Register a new membership</h:outputLink>
+
+        </h:panelGroup>
+
+    </h:panelGroup>
+
+    <script type="text/javascript" src="/resources/plugins/jquery-2.2.3.min.js"></script>
+    <script type="text/javascript" src="/resources/js/bootstrap.min.js"></script>
+</h:body>
 </html>
