--- a/src/main/webapp/views/login.xhtml
+++ b/src/main/webapp/views/login.xhtml
@@ -30,12 +30,12 @@
             <h:form prependId="false">
 
                 <h:panelGroup layout="block" class="form-group has-feedback">
-                    <h:inputText id="j_username" class="form-control" required="true"/>
+                    <h:inputText id="username" class="form-control" required="true"/>
                     <span class="glyphicon glyphicon-envelope form-control-feedback"/>
                 </h:panelGroup>
 
                 <h:panelGroup layout="block" class="form-group has-feedback">
-                    <h:inputSecret id="j_password" class="form-control" required="true"/>
+                    <h:inputSecret id="password" class="form-control" required="true"/>
                     <span class="glyphicon glyphicon-lock form-control-feedback"/>
                 </h:panelGroup>
 
