--- a/src/main/webapp/views/login.xhtml
+++ b/src/main/webapp/views/login.xhtml
@@ -4,12 +4,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core" xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 <h:head>
+    <title>AdminLTE 2 | Log in</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"/>
-    <title>AdminLTE 2 | Log in</title>
     <link rel="stylesheet" href="/resources/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"/>
@@ -30,12 +30,14 @@
             <h:form prependId="false">
 
                 <h:panelGroup layout="block" class="form-group has-feedback">
-                    <h:inputText id="username" class="form-control" required="true"/>
+                    <h:inputText id="username" class="form-control"
+                                 a:placeholder="Login" required="true"/>
                     <span class="glyphicon glyphicon-envelope form-control-feedback"/>
                 </h:panelGroup>
 
                 <h:panelGroup layout="block" class="form-group has-feedback">
-                    <h:inputSecret id="password" class="form-control" required="true"/>
+                    <h:inputSecret id="password" class="form-control"
+                                   a:placeholder="Password" required="true"/>
                     <span class="glyphicon glyphicon-lock form-control-feedback"/>
                 </h:panelGroup>
 
@@ -47,8 +49,10 @@
                 </h:panelGroup>
 
             </h:form>
-            <h:outputLink value="#">I forgot my password</h:outputLink><br/>
-            <h:outputLink value="register.html" class="text-center">Register a new membership</h:outputLink>
+
+            <h:outputLink value="index.xhtml" immediate="true">Home page</h:outputLink><br/>
+            <!--<h:outputLink value="#">I forgot my password</h:outputLink><br/>-->
+            <h:outputLink value="register.xhtml" class="text-center">Register a new membership</h:outputLink>
 
         </h:panelGroup>
 
