--- a/src/main/webapp/views/user/animal-registration.xhtml
+++ b/src/main/webapp/views/user/animal-registration.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 
 <h:head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -15,6 +16,20 @@
     <f:view>
         <h:form prependId="false" id="animal-form">
 
+            <h:panelGroup id="group"
+                    layout="block"
+                          class="form-group has-feedback">
+                <h:inputText id="name"
+                             type="text"
+                             class="form-control"
+                             a:placeholder="*Name"
+                             value="#{animalModelBean.name}"
+                             required="true"
+                             requiredMessage="Input name!"/>
+                <h:message for="name" style="color: red"/>
+                <span class="glyphicon glyphicon-user form-control-feedback"/>
+            </h:panelGroup>
+
             <h:panelGroup layout="block" class="form-group has-feedback">
                 <h:outputText value="Type"/>
                 <h:selectOneMenu value="#{animalModelBean.type}" converter="#{animalTypeConverter}">
@@ -22,11 +37,28 @@
                 </h:selectOneMenu>
             </h:panelGroup>
 
+            <h:panelGroup layout="block" class="form-group has-feedback">
+                <h:outputText value="Gender"/>
+                <h:selectOneMenu value="#{animalModelBean.gender}" converter="#{genderConverter}">
+                    <f:selectItems value="#{genderBean.genderMap}"/>
+                </h:selectOneMenu>
+            </h:panelGroup>
+
+            <h:panelGroup layout="block"
+                          class="form-group has-feedback">
+                <h:inputText id="info"
+                             type="text"
+                             class="form-control"
+                             a:placeholder="Info"
+                             value="#{animalModelBean.info}"/>
+                <span class="glyphicon glyphicon-user form-control-feedback"/>
+            </h:panelGroup>
+
             <h:panelGroup layout="block" class="col-xs-4 col-xs-offset-8">
                 <h:commandLink type="submit"
                                value="Button1"
                                action="#{animalRegistrationBean.saveAnimal()}">
-                    <f:ajax execute="animal-form"/>
+                    <f:ajax execute="animal-form" render="group"/>
                 </h:commandLink>
             </h:panelGroup>
         </h:form>
