--- a/src/main/webapp/views/user/animal-registration.xhtml
+++ b/src/main/webapp/views/user/animal-registration.xhtml
@@ -5,7 +5,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough" xmlns:p="http://www.springframework.org/tags/form">
 <!--xmlns:h="http://java.sun.com/jsf/html"-->
 
 <h:head>
@@ -77,7 +77,7 @@
 
                 <h:panelGroup layout="block" class="col-xs-4 col-xs-offset-8">
                     <h:commandLink value="Add"
-                                   action="#{animalRegistrationBean.saveAnimal()}">
+                                   action="#{animalRegistrationBean.saveAnimal}">
                     </h:commandLink>
                 </h:panelGroup>
             </h:form>
@@ -86,6 +86,12 @@
         </h:panelGroup>
     </h:panelGroup>
 
+    <script type="text/javascript">
+        function waitAndRedirect() {
+            alert('Success');
+            window.location.replace('/views/index.xhtml');
+        }
+    </script>
     <script type="text/javascript" src="/resources/plugins/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="/resources/js/bootstrap.min.js"></script>
 </h:body>
