--- a/src/main/webapp/views/register.xhtml
+++ b/src/main/webapp/views/register.xhtml
@@ -109,24 +109,17 @@
                 <h:panelGroup layout="block" class="col-xs-4 col-xs-offset-8">
                     <h:commandLink value="Sign in"
                                    type="submit"
-                                   action="#{registrationBean.saveUser()}"
+                                   action="#{registrationBean.saveUser}"
                                    class="btn btn-primary btn-block btn-flat">
                         <f:ajax execute="reg-form" render="reg-form"/>
                     </h:commandLink>
                 </h:panelGroup>
             </h:form>
 
-            <h:outputLink value="index.xhtml" immediate="true">Home page</h:outputLink><br/>
             <h:outputLink value="login.xhtml" class="text-center">I already have a membership</h:outputLink>
         </h:panelGroup>
     </h:panelGroup>
 
-    <script type="text/javascript">
-        function waitAndRedirect() {
-            alert('Success');
-            window.location.replace('/views/index.xhtml');
-        }
-    </script>
     <script type="text/javascript" src="/resources/plugins/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="/resources/js/bootstrap.min.js"></script>
 </h:body>
