master: logout added

--- a/src/main/webapp/views/admin/home-admin.xhtml
+++ b/src/main/webapp/views/admin/home-admin.xhtml
@@ -23,7 +23,8 @@
 
     <h:form>
         <h:inputText value="Admin"/>
-        <h:commandLink action="#{authenticationBean.doLogout}">logout</h:commandLink>
+        <h:commandLink action="#{authenticationBean.doLogout}">
+            logout</h:commandLink>
     </h:form>
 </h:body>
 </html>
