--- a/src/main/webapp/views/index.xhtml
+++ b/src/main/webapp/views/index.xhtml
@@ -22,7 +22,7 @@
     </f:metadata>
 
     <h:form>
-        <h:inputText value="#{userBean.firstUserMail}"/>
+        <h:inputText value="User or anon"/>
         <h:commandLink action="#{authenticationBean.doLogout}">logout</h:commandLink>
     </h:form>
 </h:body>
